# Shuren-AI

./: docker-compose.yml  onboarding_compliance_analysis.md  onboarding_implementation_analysis.md
backend/: .coverage  .dockerignore  .env.example  .gitignore  AGENT_VERIFICATION_REPORT.md  DIET_PLANNER_AGENT_TEST_RESULTS.md  DOCSTRING_VERIFICATION_REPORT.md  Dockerfile.agent  E2E_TEST_RESULTS.md  GENERAL_ASSISTANT_AGENT_SUMMARY.md  LIVEKIT_CHECKPOINT_RESULTS.md  MIGRATION_TESTING_NOTES.md  README.md  SCHEDULER_AGENT_FINAL_SUMMARY.md  SCHEDULER_AGENT_IMPLEMENTATION.md  SCHEDULER_AGENT_TEST_RESULTS.md  SETUP_COMPLETE.md  SUPPLEMENT_AGENT_IMPLEMENTATION.md  TASK_11.2_SUMMARY.md  TESTAGENT_VERIFICATION_RESULTS.md  TEST_SUITE_FIXES_SUMMARY.md  TRACKER_AGENT_IMPLEMENTATION.md  TRACKER_AGENT_SUMMARY.md  alembic.ini  meal_templates_migration.sql  pyproject.toml  requirements.txt  run_local.bat  run_local.sh  seed_dishes.py  test_config_method.py  test_db_connection.py  test_e2e_live.py  test_general_assistant_demo.py  test_output.txt  test_scheduler_agent_demo.py  test_summary.txt  test_tracker_agent_demo.py  verify_agents.py  verify_all_docstrings.py  (+8 more)
backend/alembic/: env.py
backend/api_testing_postman/: .postman.json  POSTMAN_TESTING_README.md  QUICK_START_TESTING.md  postman-automation.js  test-api-endpoints.js  validate-postman-framework.js
backend/app/: __init__.py  main.py
backend/docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  GOOGLE_OAUTH_INTEGRATION.md  STREAMING_DATABASE_FIX.md  onboarding_agent_foundation_deployment.md
backend/scripts/: README.md  check_db.py  check_db_state.py  check_users_schema.py  create_test_data_for_rollback.py  reset_db.py  setup_databases_simple.bat  test_connection.py  test_migration_11_to_9.py  test_migration_rollback.py  verify_migration_state.py  verify_schema.py
backend/seed_data/: dishes.py  ingredients.py  seed_exercise_library.py  seed_ingredients.py  verify_exercises.py  verify_workout_plans.py
backend/tests/: README.md  conftest.py  test_agent_history_tracking.py  test_agent_onboarding_tools.py  test_agent_orchestrator_integration.py  test_agent_orchestrator_refinement.py  test_auth_endpoints.py  test_base_onboarding_agent.py  test_chat_endpoints.py  test_chat_properties.py  test_chat_schemas.py  test_chat_streaming_properties.py  test_config.py  test_context_handover.py  test_context_loader.py  test_data_privacy_properties.py  test_data_validation_properties.py  test_database_foundation.py  test_database_isolation.py  test_deps.py  test_diet_planner_agent.py  test_diet_planning_agent.py  test_dish_endpoints.py  test_dish_service.py  test_e2e_fitness_goal_agents.py  test_feature_lock_enforcement_properties.py  test_fixtures.py  (+63 more)
(+425 files in other folders)
